--- a/app/src/main/res/layout/sensorinputsettingslayout.xml
+++ b/app/src/main/res/layout/sensorinputsettingslayout.xml
@@ -31,10 +31,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/tv_sensor_type1_label"
             android:layout_toRightOf="@+id/tv_sensor_type1_label"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:textColor="#444"
             android:textSize="14sp" />
     </RelativeLayout>
@@ -126,11 +126,12 @@
             android:id="@+id/tv_sensor_type2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/tv_sensor_type2_label"
             android:layout_toRightOf="@+id/tv_sensor_type2_label"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:textColor="#444"
             android:textSize="14sp" />
     </RelativeLayout>
