--- a/app/src/main/res/layout/localsetlayout.xml
+++ b/app/src/main/res/layout/localsetlayout.xml
@@ -5,8 +5,9 @@
     <ListView
         android:id="@+id/local_info_list"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttoncanter"
+        android:layout_marginBottom="30dp"
         />
     <LinearLayout
         android:id="@+id/buttoncanter"
