--- a/app/src/main/res/layout/freeze_data_layout.xml
+++ b/app/src/main/res/layout/freeze_data_layout.xml
@@ -65,4 +65,21 @@
             android:textColor="#fff"
             android:textSize="16sp" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/testdb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="写入"/>
+        <Button
+            android:id="@+id/testrd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="读取"/>
+    </LinearLayout>
+
 </LinearLayout>
