--- a/app/src/main/res/layout/nb_registger_fragment.xml
+++ b/app/src/main/res/layout/nb_registger_fragment.xml
@@ -82,9 +82,9 @@
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
-               android:text="DEVICEID:"/>
+               android:text="操作结果:"/>
            <TextView
-               android:id="@+id/nb_deviceid_info"
+               android:id="@+id/nb_result_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
