--- a/app/src/main/res/layout/press_sensor_set_layout.xml
+++ b/app/src/main/res/layout/press_sensor_set_layout.xml
@@ -33,6 +33,7 @@
         android:id="@+id/press_sensor_set_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
         />
 </LinearLayout>
@@ -77,7 +78,7 @@
         android:background="#CFCFCF" />
 </LinearLayout>
     <LinearLayout
-        android:id="@+id/freeze_buttoncanter1"
+        android:id="@+id/press_sensor_buttoncanter1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="2"
@@ -87,7 +88,7 @@
         android:layout_alignParentBottom="true">
 
         <Button
-            android:id="@+id/freeze_but1"
+            android:id="@+id/press_sensor_but1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
