--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="color_unselected">#777777</color>
     <!--标签Tab选中的颜色-->
     <color name="color_selected">#303F9F</color>
-
+    <!--warn -->
+    <color name="color_warning">#b6062f</color>
 </resources>
