历史数据功能块完成，发布第一版测试 修改bug： 读数据前先清空list

--- a/app/src/main/res/layout/instrumentfraglayout.xml
+++ b/app/src/main/res/layout/instrumentfraglayout.xml
@@ -176,18 +176,27 @@
         >
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:id="@+id/tv_ins_2000_lable">
+
             <TextView
+                android:id="@+id/ins_select_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:text="寄存器 2000"/>
+                android:text="寄存器:"/>
+
+            <Spinner
+                android:id="@+id/ins_select_spiner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/ins_select_title" />
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/icon_jiantou"
+                android:visibility="gone"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
