--- a/app/src/main/res/layout/instrumentfraglayout.xml
+++ b/app/src/main/res/layout/instrumentfraglayout.xml
@@ -191,6 +191,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="30dp"
                 android:layout_toRightOf="@id/ins_select_title" />
             <ImageView
                 android:layout_width="wrap_content"
