--- a/app/src/main/res/layout/app_version_fregment_layout.xml
+++ b/app/src/main/res/layout/app_version_fregment_layout.xml
@@ -11,6 +11,15 @@
     android:layout_weight="8"
     android:orientation="vertical"
     >
+
+<TextView
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="30sp"
+        android:textColor="@color/colorPrimary"
+        android:text="APP版本信息"/>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="50dp"
