--- a/app/src/main/res/layout/real_time_data_layout.xml
+++ b/app/src/main/res/layout/real_time_data_layout.xml
@@ -73,6 +73,31 @@
         android:layout_height="0.5dp"
         android:background="#CFCFCF" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="gone">
+        <TextView
+            android:id="@+id/real_time_timeinfo_labale"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="40dp"
+            android:text="更新时间:"/>
+        <TextView
+            android:id="@+id/real_time_timeinfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/real_time_timeinfo_labale"
+            android:layout_toEndOf="@id/real_time_timeinfo_labale"
+            />
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#CFCFCF" />
+
     <LinearLayout
         android:id="@+id/realtime_buttoncanter"
         android:layout_width="match_parent"
