--- a/app/src/main/res/layout/freeze_data_layout.xml
+++ b/app/src/main/res/layout/freeze_data_layout.xml
@@ -69,6 +69,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="horizontal">
         <Button
             android:id="@+id/testdb"
