--- a/app/src/main/res/layout/sensorinputsettingslayout.xml
+++ b/app/src/main/res/layout/sensorinputsettingslayout.xml
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:text="高报警:"
+            android:text="高报警(KPa):"
             android:textColor="#444"
             android:textSize="14sp" />
 
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:text="低报警:"
+            android:text="低报警(KPa):"
             android:textColor="#444"
             android:textSize="14sp" />
 
@@ -173,7 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:text="高报警:"
+            android:text="高报警(KPa):"
             android:textColor="#444"
             android:textSize="14sp" />
 
@@ -198,7 +198,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:text="低报警:"
+            android:text="低报警(KPa):"
             android:textColor="#444"
             android:textSize="14sp" />
 
@@ -238,7 +238,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:text="温度:"
+            android:text="温度(℃):"
             android:textColor="#444"
             android:textSize="14sp" />
 
@@ -368,7 +368,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
-                    android:text="扫描时间:"
+                    android:text="扫描时间(秒):"
                     android:textColor="#444"
                     android:textSize="14sp" />
 
@@ -393,7 +393,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
-                    android:text="记录时间:"
+                    android:text="记录时间(分):"
                     android:textColor="#444"
                     android:textSize="14sp" />
 
