--- a/app/src/main/res/layout/hexfile2binfile_fragment.xml
+++ b/app/src/main/res/layout/hexfile2binfile_fragment.xml
@@ -40,6 +40,7 @@
         android:orientation="vertical"
         android:weightSum="10">
         <android.support.v7.widget.CardView
+            android:id="@+id/textcontainer"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp"
             app:cardMaxElevation="20dp"
@@ -50,18 +51,6 @@
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp">
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/firmware_show"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="8"
-                    android:scrollbars="vertical"
-                    android:singleLine="false"
-                    />
-            </ScrollView>
 
             </android.support.v7.widget.CardView>
 
