添加固件升级的功能 修改bug

--- a/app/src/main/res/layout/hexfile2binfile_fragment.xml
+++ b/app/src/main/res/layout/hexfile2binfile_fragment.xml
@@ -17,14 +17,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:hint="请选择文件路径"
+            android:hint="请先下载文件"
             android:layout_weight="9" />
         <ImageView
             android:id="@+id/btn_openfile"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/icon_opnefile_browser"
+            android:src="@drawable/download"
             android:layout_weight="1"/>
     </LinearLayout>
     <!-- 分割线 -->
