--- a/app/src/main/res/layout/curentsettinglayout.xml
+++ b/app/src/main/res/layout/curentsettinglayout.xml
@@ -181,7 +181,12 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="#CFCFCF" />
-
+<LinearLayout
+    android:id="@+id/local_extraitem_set"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
